src/test/resources/LO-2/InvalidPrograms/test_15.lo
// Incorrect operator for binary operation

String main(){
  String a, b;
  {
    a = "123";
    b = "abc";
    return (a ~ b);
  }
}